# BasicTeleop

./: README.md  START.sh  pyproject.toml
config/: steering_wheel_config.ini
cpp/: CMakeLists.txt
cpp/src/: distributed_app.cpp  hello_world.cpp  holoviz_camera_app.cpp  ping.cpp  realsense.cpp  realsense.hpp
python/: carla_spawn.py  distributed_launch.py  example.py  launch_carla_stream_receiver.py  launch_carla_streamer.py  main.py  ping.py  robot_teleop_app.py  steering_wheel_operator.py
python/control/: steering_wheel_controller.py
python/streaming/: gstream_zed_receiver.py  gstream_zed_sender.py  zed_receiver.py  zed_sender.py
